RESOLVED FIXED267321
WebPaymentCoordinatorProxy should not send IPC to WebProcess when the connection is null
https://bugs.webkit.org/show_bug.cgi?id=267321
Summary WebPaymentCoordinatorProxy should not send IPC to WebProcess when the connect...
Abrar Rahman Protyasha
Reported 2024-01-10 01:13:37 PST
It is possible for WebPaymentCoordinatorProxy to send IPC messages to the WP when the connection is null. This can happen when a WP terminates while a payment sheet is showing, and since the proxy will be alive, it will end up sending a DidCancelPaymentSession message in its destructor. Unfortunately, this causes the UI process to terminate, which is a bad user experience for, say, Safari users. We should make sure WebPaymentCoordinatorProxy is smart enough to not send this IPC message if the WP is not alive.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-10 01:13:47 PST
Abrar Rahman Protyasha
Comment 2 2024-01-10 01:41:59 PST
EWS
Comment 3 2024-01-13 15:20:19 PST
Committed 273018@main (133a77cf0f1d): <https://commits.webkit.org/273018@main> Reviewed commits have been landed. Closing PR #22573 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.